--- a/src/components/Sidenav/MultilevelSideNav.css
+++ b/src/components/Sidenav/MultilevelSideNav.css
@@ -6,17 +6,18 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-image: linear-gradient(to top left, rgba(32, 32, 32, 0), rgb(10, 10, 10));
+  /* background-image: linear-gradient(to top left, rgba(32, 32, 32, 0), rgb(10, 10, 10)); */
   overflow-x: hidden;
-  padding-top: 60px;
-  
+  padding-top: 50px;
+  border-right: 1px solid rgba(108, 5, 5, 0.619);
+  border-bottom-right-radius: 20px;
 }
 
 .multilevelSideNav a {
   padding: 8px 8px 8px 8px;
   text-decoration: none;
-  font-size: 25px;
-  color: #ffffff;
+  font-size: 20px;
+  color: black;
   display: block;
   transition: 0.3s;
 }
@@ -26,7 +27,7 @@ multilevelSideNav a:active {
 }
 
 .multilevelSideNav a:hover {
-  color: black;
+  color: rgb(172, 170, 170);
 }
 
 .multilevelSideNav .closebtn {
